# pota-mcp

./: README.md  pyproject.toml  server.json
src/pota_mcp/: __init__.py  client.py  server.py
tests/: conftest.py  test_live.py  test_tools.py
