[project]
name = "pota-mcp"
version = "0.1.1"
description = "MCP server for Parks on the Air — park lookup, activator/hunter stats, spots"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
authors = [{name = "Greg Beam, KI7MT"}]
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=3.0",
]
keywords = [
    "amateur-radio", "ham-radio", "pota", "parks-on-the-air", "activator",
    "mcp", "model-context-protocol", "hunter", "spots",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Communications :: Ham Radio",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://qso-graph.io/"
Repository = "https://github.com/qso-graph/pota-mcp"
Issues = "https://github.com/qso-graph/pota-mcp/issues"

[project.scripts]
pota-mcp = "pota_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pota_mcp"]
